Updated and corrected swagger.yaml doc and corresponding generated code
