# swagger_server/swagger/swagger.yaml
@@ -101,10 +101,18 @@ paths:
         available comercializacao info in the system
       operationId: search_comercializacao
       parameters:
-      - name: Produto_search_String
+      - name: Comercializacao_category_search_String
+        in: query
+        description: pass a category name search string for looking up comercializacao
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: string
+      - name: Comercializacao_product_search_String
         in: query
         description: pass a product name search string for looking up comercializacao
-        required: true
+        required: false
         style: form
         explode: true
         schema:
@@ -138,7 +146,7 @@ paths:
         available importacao info in the system
       operationId: search_importacao
       parameters:
-      - name: Processamento_category_search_String
+      - name: Importacao_category_search_String
         in: query
         description: pass a category name search string for looking up importacao
         required: true
@@ -146,7 +154,7 @@ paths:
         explode: true
         schema:
           type: string
-      - name: Processamento_product_search_String
+      - name: Importacao_product_search_String
         in: query
         description: pass a product name search string for looking up importacao
         required: false
@@ -183,7 +191,7 @@ paths:
         available exportacao info in the system
       operationId: search_exportacao
       parameters:
-      - name: Processamento_category_search_String
+      - name: Exportacao_category_search_String
         in: query
         description: pass a category name search string for looking up exportacao
         required: true
@@ -191,7 +199,7 @@ paths:
         explode: true
         schema:
           type: string
-      - name: Processamento_product_search_String
+      - name: Exportacao_product_search_String
         in: query
         description: pass a product name search string for looking up exportacao
         required: false
